--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
     background-size:cover;
     background-position:center bottom;
     min-height: 100vh;
+    font-family: 'Press Start 2P', cursive;
 }
 
 #buttons{
